fixed overflow bug

--- a/app/assets/stylesheets/components/_products.scss
+++ b/app/assets/stylesheets/components/_products.scss
@@ -1,6 +1,7 @@
 .product-card {
   background-color: hsl(0, 0%, 16%);
   border-radius: 5px;
+  overflow: hidden;
   margin-bottom: 1.25rem;
   .product-image {
     padding: 10px;
